ipc/ipdl/test/ipdl/error/noEmptyToplevel.ipdl
protocol noEmptyToplevel {

    // it's an error for top-level protocols to be empty

};
